# telemetry-server

./: .gitignore  .gitmodules  Cargo.toml  README.md  copy-dist.ps1  example_telemetry_generator copy.py  example_telemetry_generator.py  telemachus_openmct_bridge.py
src/: data.rs  database_actor.rs  injest_socket.rs  main.rs  messages.rs  realtime_telemetry_provider.rs
src/actors/: database.rs  mod.rs  telemetry.rs
src/actors/telemetry/: injest.rs  realtime.rs
